<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ff00ff00"
    tools:context="com.example.dell.animaciontransicionactivity.SecondActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="zoomBack"
        android:text="@string/zoomBack"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="right"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="fade"
        android:text="@string/fade"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="back"
        android:text="@string/byDefaultBack"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />



</LinearLayout>
