<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffff0000"
    tools:context="com.example.dell.animaciontransicionactivity.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="forwardZoom"
        android:background="#000000"
        android:text="@string/zoomForward"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="left"
        android:background="#000000"
        android:text="@string/left"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="fade"
        android:background="#000000"
        android:text="@string/fade"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="byDefault"
        android:background="#000000"
        android:text="@string/byDefault"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
    <Button
        android:id="@+id/button14"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="oblicuo"
        android:background="#000000"
        android:text="oblicuo"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</LinearLayout>
